[gd_scene load_steps=5 format=2]

[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://TitleScreen/title.jpg" type="Texture" id=2]
[ext_resource path="res://TitleScreen/Button.gd" type="Script" id=3]
[ext_resource path="res://TitleScreen/FadeIn.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Transform" ]

[node name="TextureRect2" type="TextureRect" parent="CanvasModulate" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1984.0
margin_bottom = 1136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Buttons" type="Node2D" parent="." index="1"]

_sections_unfolded = [ "custom_constants" ]

[node name="NewGame" type="Button" parent="Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 658.0
margin_top = 323.0
margin_right = 1018.0
margin_bottom = 383.0
grow_horizontal = 0
rect_min_size = Vector2( 360, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
script = ExtResource( 3 )
scene_to_load = "res://Tutorial/Tutorial.tscn"

[node name="Options" type="Button" parent="Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 657.0
margin_top = 414.0
margin_right = 1017.0
margin_bottom = 474.0
grow_horizontal = 0
rect_min_size = Vector2( 360, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="FadeIn" parent="." index="2" instance=ExtResource( 4 )]

visible = false

[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]


